@@ -22,6 +22,7 @@ CHANGELOG
   and Capture services.
 * Installation script is modular (standalone, geotrek only, ...)
 * Settings edition prompt only happens at first install
+* Propose to backup DB before Geotrek upgrade (fixes #804)
 
 **BUG fixes**
 
